Ajout panier + accueil

--- a/html/panier.html
+++ b/html/panier.html
@@ -10,10 +10,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+    	<meta charset="UTF-8">
 	</head>
 
 	<body>
 
+		<!-- Menu -->
 		<nav>
 		    <div class="nav-wrapper">
 		    	<img src="">
@@ -34,55 +36,55 @@
 		    <li><a href="collapsible.html">Ingrédient</a></li>
 		    <li><a href="mobile.html">Deconnexion</a></li>
 	  	</ul>
+	  	<!-- Menu -->
 
-		<div class="btnGroup">
-			<p class="btn btnHoraire">Maintenant</p>
-			<p class="btn btnHoraire">19 h 30</p>
-			<p class="btn btnHoraire">Plus tard</p>
+	  	<div>
+	  		<p>PANIER</p>	
+	  	</div>
+
+		<div class="groupe1">
+			<div class="groupPanier">
+				<p class="itemPanier">Pizza 4 fromage</p>
+				<p class="itemPanier"> X 1 </p>
+				<p class="itemPanier"> 7 € </p>
+			</div>
+			<div class="groupPanier">
+				<p class="itemPanier">Pizza 4 fromage</p>
+				<p class="itemPanier"> X 1 </p>
+				<p class="itemPanier"> 7 € </p>
+			</div>
+			<div class="groupPanier">
+				<p class="itemPanier">Pizza 4 fromage</p>
+				<p class="itemPanier"> X 1 </p>
+				<p class="itemPanier"> 7 € </p>
+			</div>
+			<div class="groupPanier">
+				<p class="itemPanier">Nouvelle pizza</p>
+				<a class="btn-floating btn-medium waves-effect waves-light red"><i class="material-icons">add</i></a>
+			</div>
 		</div>
-		<div id="mapid" class="carte" style="height: 300px;"></div>
 
-		<a class="btn btnNext" href="creationPizza.html">Suivant</a>
+		<div class="">
+			<div class="groupPanier">
+				<p class="itemPanier">MONTANT</p>
+				<p class="itemPanier"> 21 € </p>
+			</div>
+		</div>
 
-		<!--JavaScript leaflet-->
-		<script>
+		<div class="">
+			<div class="groupPanier">
+				<p class="itemPanier">Echantillons</p>
+				<a class="btn-floating btn-medium waves-effect waves-light red"><i class="material-icons">add</i></a>
+				<a class="btn-floating btn-medium waves-effect waves-light red"><i class="material-icons">add</i></a>
+			</div>
+		</div>
 
-			var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+		<!--<a class="btn btnNext" href="creationPizza.html">VALIDER LA COMMANDE</a>-->
+		<!--Il faut mettre un timer pour vider le panier -->
+		<a onclick="M.toast({html: 'Votre commande à bien été passé ! '})" class="btn">VALIDER LA COMMANDE</a>
 
-			L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-				maxZoom: 18,
-				id: 'mapbox.streets'
-			}).addTo(mymap);
-
-			L.marker([51.5, -0.09]).addTo(mymap)
-				.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
-
-			L.circle([51.508, -0.11], 500, {
-				color: 'red',
-				fillColor: '#f03',
-				fillOpacity: 0.5
-			}).addTo(mymap).bindPopup("I am a circle.");
-
-			L.polygon([
-				[51.509, -0.08],
-				[51.503, -0.06],
-				[51.51, -0.047]
-			]).addTo(mymap).bindPopup("I am a polygon.");
-
-
-			var popup = L.popup();
-
-			function onMapClick(e) {
-				popup
-					.setLatLng(e.latlng)
-					.setContent("You clicked the map at " + e.latlng.toString())
-					.openOn(mymap);
-			}
-
-			mymap.on('click', onMapClick);
-
-		</script>
 		<!--JavaScript at end of body for optimized loading-->
-		<script type="text/javascript" src="js/materialize.min.js"></script>
+		<script type="text/javascript" src="../js/materialize.min.js"></script>
+		<script type="text/javascript" src="../js/js.js"></script>
 	</body>
 </html>
