--- a/html/panier.html
+++ b/html/panier.html
@@ -38,7 +38,7 @@
 	  	</ul>
 	  	<!-- Menu -->
 
-	  	<div>
+	  	<div class="titrePanier">
 	  		<p>PANIER</p>	
 	  	</div>
 
@@ -64,14 +64,14 @@
 			</div>
 		</div>
 
-		<div class="">
+		<div class="groupeMontant">
 			<div class="groupPanier">
 				<p class="itemPanier">MONTANT</p>
 				<p class="itemPanier"> 21 € </p>
 			</div>
 		</div>
 
-		<div class="">
+		<div class="groupeEch">
 			<div class="groupPanier">
 				<p class="itemPanier">Echantillons</p>
 				<a class="btn-floating btn-medium waves-effect waves-light red"><i class="material-icons">add</i></a>
@@ -80,8 +80,19 @@
 		</div>
 
 		<!--<a class="btn btnNext" href="creationPizza.html">VALIDER LA COMMANDE</a>-->
-		<!--Il faut mettre un timer pour vider le panier -->
-		<a onclick="M.toast({html: 'Votre commande à bien été passé ! '})" class="btn">VALIDER LA COMMANDE</a>
+		<!-- Modal Trigger -->
+		  <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="#modal1">Valider la commande</a>
+
+		  <!-- Modal Structure -->
+		  <div id="modal1" class="modal">
+		    <div class="modal-content">
+		      <h4>TOTAL 21.00€</h4>
+		    </div>
+		    <div class="modal-footer">
+		      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Valider</a>
+		      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Retourner au panier</a>
+		    </div>
+		  </div>
 
 		<!--JavaScript at end of body for optimized loading-->
 		<script type="text/javascript" src="../js/materialize.min.js"></script>
