--- a/html/accueil.html
+++ b/html/accueil.html
@@ -15,31 +15,37 @@
 
 	<body>
 
+		<!-- Menu -->
 		<nav>
-		    <div class="nav-wrapper">
-		    	<img src="">
-		      	<a href="#!" class="brand-logo" id="titre">Gourmand pizza</a>
-		      	<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-		      	<ul class="right hide-on-med-and-down">
-			        <li><a href="sass.html">Compte</a></li>
-			        <li><a href="badges.html">Contacte</a></li>
-			        <li><a href="collapsible.html">Ingrédient</a></li>
-			        <li><a href="mobile.html">Deconnexion</a></li>
-		      	</ul>
-		    </div>
-	  	</nav>
+			  <div class="nav-wrapper">
+				 <img src="">
+					 <a href="index.html" class="brand-logo" id="titre">Gourmand pizza</a>
+					 <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
+					 <ul class="right hide-on-med-and-down">
+						<li><a href="#">Compte</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Ingrédient</a></li>
+						<li><a href="#">Deconnexion</a></li>
+					 </ul>
+			  </div>
+		 </nav>
 
-	  	<ul class="sidenav" id="mobile-demo">
-		    <li><a href="sass.html">Compte</a></li>
-		    <li><a href="badges.html">Contacte</a></li>
-		    <li><a href="collapsible.html">Ingrédient</a></li>
-		    <li><a href="mobile.html">Deconnexion</a></li>
-	  	</ul>
+		 <ul class="sidenav" id="mobile-demo">
+			  <li><a href="#">Compte</a></li>
+			  <li><a href="#">Contact</a></li>
+			  <li><a href="#">Ingrédient</a></li>
+			  <li><a href="#">Deconnexion</a></li>
+		 </ul>
+
+
+		 <!-- Contenu de la page -->
+
+		 <p class="phraseIntro">Pour quand souhaitez-vous votre pizza ?</p>
 
 		<div class="btnGroup">
-			<p class="btn btnHoraire">Maintenant</p>
-			<p class="btn btnHoraire">19 h 30</p>
-			<p class="btn btnHoraire">Plus tard</p>
+			<p class="btn btnHoraire" id="btnOption1">Maintenant</p>
+			<p class="btn btnHoraire" id="btnOption2">19 h 30</p>
+			<p class="btn btnHoraire" id="btnOption3">Plus tard</p>
 		</div>
 		<div id="mapid" class="carte" style="height: 300px;"></div>
 
@@ -83,7 +89,9 @@
 			mymap.on('click', onMapClick);
 
 		</script>
-		<!--JavaScript at end of body for optimized loading-->
-		<script type="text/javascript" src="js/materialize.min.js"></script>
+		<!-- Import de JavaScript -->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="../js/materialize.min.js"></script>
+		<script type="text/javascript" src="../js/js.js"></script>
 	</body>
 </html>
