--- a/html/panier.html
+++ b/html/panier.html
@@ -17,29 +17,31 @@
 
 		<!-- Menu -->
 		<nav>
-		    <div class="nav-wrapper">
-		    	<img src="">
-		      	<a href="#!" class="brand-logo" id="titre">Gourmand pizza</a>
-		      	<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-		      	<ul class="right hide-on-med-and-down">
-			        <li><a href="sass.html">Compte</a></li>
-			        <li><a href="badges.html">Contacte</a></li>
-			        <li><a href="collapsible.html">Ingrédient</a></li>
-			        <li><a href="mobile.html">Deconnexion</a></li>
-		      	</ul>
-		    </div>
-	  	</nav>
+			  <div class="nav-wrapper">
+				 <img src="">
+					 <a href="index.html" class="brand-logo" id="titre">Gourmand pizza</a>
+					 <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
+					 <ul class="right hide-on-med-and-down">
+						<li><a href="#">Compte</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Ingrédient</a></li>
+						<li><a href="#">Deconnexion</a></li>
+					 </ul>
+			  </div>
+		 </nav>
 
-	  	<ul class="sidenav" id="mobile-demo">
-		    <li><a href="sass.html">Compte</a></li>
-		    <li><a href="badges.html">Contacte</a></li>
-		    <li><a href="collapsible.html">Ingrédient</a></li>
-		    <li><a href="mobile.html">Deconnexion</a></li>
-	  	</ul>
-	  	<!-- Menu -->
+		 <ul class="sidenav" id="mobile-demo">
+			  <li><a href="#">Compte</a></li>
+			  <li><a href="#">Contact</a></li>
+			  <li><a href="#">Ingrédient</a></li>
+			  <li><a href="#">Deconnexion</a></li>
+		 </ul>
+
+
+		 <!-- Contenu de la page -->
 
 	  	<div class="titrePanier">
-	  		<p>PANIER</p>	
+	  		<p>PANIER</p>
 	  	</div>
 
 		<div class="groupe1">
@@ -94,8 +96,9 @@
 		    </div>
 		  </div>
 
-		<!--JavaScript at end of body for optimized loading-->
-		<script type="text/javascript" src="../js/materialize.min.js"></script>
-		<script type="text/javascript" src="../js/js.js"></script>
+		  <!-- Import de JavaScript -->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../js/materialize.min.js"></script>
+  		<script type="text/javascript" src="../js/js.js"></script>
 	</body>
 </html>
