--- a/html/accueil.html
+++ b/html/accueil.html
@@ -54,39 +54,27 @@
 		<!--JavaScript leaflet-->
 		<script>
 
-			var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+			var mymap = L.map('mapid').setView([48.692054, 6.184417], 13);
 
 			L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 				maxZoom: 18,
 				id: 'mapbox.streets'
 			}).addTo(mymap);
 
-			L.marker([51.5, -0.09]).addTo(mymap)
-				.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
+			L.marker([48.69624, 6.180496]).addTo(mymap)
+				.bindPopup("<b>Restaurant 1 </b>").openPopup();
 
-			L.circle([51.508, -0.11], 500, {
-				color: 'red',
-				fillColor: '#f03',
-				fillOpacity: 0.5
-			}).addTo(mymap).bindPopup("I am a circle.");
+			L.marker([48.686835, 6.171913]).addTo(mymap)
+				.bindPopup("<b>Restaurant 2 </b>").openPopup();
 
-			L.polygon([
-				[51.509, -0.08],
-				[51.503, -0.06],
-				[51.51, -0.047]
-			]).addTo(mymap).bindPopup("I am a polygon.");
+			L.marker([48.683435, 6.186504]).addTo(mymap)
+				.bindPopup("<b>Restaurant 3 </b>").openPopup();
 
+			L.marker([48.699752, 6.204872]).addTo(mymap)
+				.bindPopup("<b>Restaurant 4 </b>").openPopup();
 
-			var popup = L.popup();
-
-			function onMapClick(e) {
-				popup
-					.setLatLng(e.latlng)
-					.setContent("You clicked the map at " + e.latlng.toString())
-					.openOn(mymap);
-			}
-
-			mymap.on('click', onMapClick);
+			L.marker([48.703264, 6.173973]).addTo(mymap)
+				.bindPopup("<b>Restaurant 5 </b>").openPopup();
 
 		</script>
 		<!-- Import de JavaScript -->
