Ajout page menu

--- a/html/panier.html
+++ b/html/panier.html
@@ -31,7 +31,7 @@
 		 </nav>
 
 		 <ul class="sidenav menuSideNav" id="mobile-demo">
-			  <li class="compteNav"><a href="#"><i class="small material-icons">contacts</i>Compte</a></li>
+			  <li class="compteNav"><a href="compte.html"><i class="small material-icons">contacts</i>Compte</a></li>
 			  <li class="contactNav"><a href="#"><i class="small material-icons">local_phone</i>Contact</a></li>
 			  <li class="ingredientNav"><a href="#"><i class="small material-icons">restaurant_menu</i>Ingrédient</a></li>
 			  <li class="decoNav"><a href="#"><i class="small material-icons">settings_power</i>Deconnexion</a></li>
@@ -44,7 +44,7 @@
 	  		<p>PANIER</p>
 	  	</div>
 
-		<div class="groupe1">
+		<div class="groupe1 grey lighten-4">
 			<div class="row groupPanier">
 				<p class="col s7 itemPanier nameItem">Pizza 4 fromage</p>
 				<p class="col s2 itemPanier qteItem"> X 1 </p>
@@ -62,25 +62,25 @@
 			</div>
 		</div>
 
-		<div class="addPizza">
+		<div class="addPizza grey lighten-4">
 			<div class="row groupPanier">
 				<p class="col s8 itemPanier addPizza">NOUVELLE PIZZA</p>
-				<a class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
+				<a href="choixPizza.html" class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
 			</div>
 		</div>
 
-		<div class="groupeMontant">
+		<div class="groupeMontant grey lighten-4">
 			<div class="row groupPanier">
 				<p class="col s9 itemPanier montantItem">MONTANT</p>
 				<p class="col s3 itemPanier prixItem"> 35.00 € </p>
 			</div>
 		</div>
 
-		<div class="groupeEch">
+		<div class="groupeEch grey lighten-4">
 			<div class="row groupPanier">
 				<p class="col s8 itemPanier titreEchant">Echantillons</p>
-				<a class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
-				<a class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
+				<a href="choixPizza.html" class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
+				<a href="choixPizza.html" class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
 			</div>
 		</div>
 
