--- a/html/panier.html
+++ b/html/panier.html
@@ -45,17 +45,17 @@
 	  	</div>
 
 		<div class="groupe1 grey lighten-4">
-			<div class="row groupPanier">
+			<div class="row groupPanier itemPizza">
 				<p class="col s7 itemPanier nameItem">Pizza 4 fromage</p>
 				<p class="col s2 itemPanier qteItem"> X 1 </p>
 				<p class="col s3 itemPanier prixItem"> 8.00 € </p>
 			</div>
-			<div class="row groupPanier">
+			<div class="row groupPanier itemPizza">
 				<p class="col s7 itemPanier nameItem">Pizza 4 fromage</p>
 				<p class="col s2 itemPanier qteItem"> X 2 </p>
 				<p class="col s3 itemPanier prixItem"> 10.00 € </p>
 			</div>
-			<div class="row groupPanier">
+			<div class="row groupPanier itemPizza">
 				<p class="col s7 itemPanier nameItem">Pizza 4 fromage</p>
 				<p class="col s2 itemPanier qteItem"> X 1 </p>
 				<p class="col s3 itemPanier prixItem"> 7.00 € </p>
