--- a/html/favorites.html
+++ b/html/favorites.html
@@ -41,6 +41,9 @@
     			<a href="choixPizza.html" class="btn btnHoraire disactive">Classiques</a>
     		</div>
 
+         <p class="phraseIntro">Commandez votre pizza avant <strong>15min </strong><br />et venez la chercher à <strong>19h</strong></p>
+
+
           <!-- Choix des pizzas -->
 
          <div class="row">
