amelioration panier, page d'accueil, page du choix des pizzas faite

--- a/html/accueil.html
+++ b/html/accueil.html
@@ -40,14 +40,14 @@
 
 		 <!-- Contenu de la page -->
 
-		 <p class="phraseIntro"><strong>Où</strong> et <strong>quand</strong> souhaitez-vous votre pizza ?</p>
+		 <p class="phraseIntro" style="margin-top:23px;"><strong>Où</strong> et <strong>quand</strong> souhaitez-vous votre pizza ?</p>
 
 		<div class="btnGroup">
 			<p class="btn btnHoraire" id="btnOption1">Maintenant</p>
 			<p class="btn btnHoraire" id="btnOption2">19 h 30</p>
 			<p class="btn btnHoraire" id="btnOption3">Plus tard</p>
 		</div>
-		<div id="mapid" class="carte" style="height: 300px;"></div>
+		<div id="mapid" class="carte" style="height: 400px; margin:23px 0px;"></div>
 
 		<a class="btn btnNext" href="creationPizza.html"><i class="material-icons">navigate_next</i></a>
 
