--- a/html/compte.html
+++ b/html/compte.html
@@ -36,11 +36,14 @@
 
           <!-- Contenu de la page -->
 
+
           <div class="titrePanier">
             <p>MES INFORMATIONS DE COMPTE</p>
           </div>
 
-          <div class="contact">
+          <div class="row">
+
+          <div class="contact col s12">
             <div class="row groupPanier">
               <p class="col s7 itemPanier nameItem">NOM : </p>
               <p class="col s5 itemPanier qteItem">Michel</p>
@@ -63,7 +66,10 @@
             </div>
           </div>
 
-          <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="accueil.html">Retour à l'accueil <i class="large material-icons">arrow_back</i></a>
+          <a class="waves-effect waves-light btn btnValideCommande modal-trigger  col s12" href="accueil.html"><i class="large material-icons">navigate_before</i></a>
+
+       </div>
+
       <!-- Import de JavaScript -->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
