--- a/html/creationPizza.html
+++ b/html/creationPizza.html
@@ -104,7 +104,7 @@
               </div>
 
           <div class="btnCreaPizza">
-                <a class="btn"><i class="material-icons">shopping_cart</i></a>
+                <a href="panier.html" class="btn"><i class="material-icons">shopping_cart</i></a>
                 <a class="btn disabled" id="ingredPred"><i class="material-icons">navigate_before</i></a>
                 <a class="btn disabled" id="ingredSuivant"><i class="material-icons">navigate_next</i></a>
           </div>
