--- a/html/favorites.html
+++ b/html/favorites.html
@@ -46,62 +46,107 @@
 
           <!-- Choix des pizzas -->
 
-         <div class="row">
-           <div class="col s12">
-              <div class="card">
-               <div class="card-image">
-                  <img src="../medias/pizza-napoletana.jpg">
-                  <span class="card-title">Pizza Napoletana</span>
-               </div>
-               <div class="card-action conteneurBtn">
-                  <a href="#" id="lien"><i class="medium material-icons">add_box</i></a>
-                  <a href="#" id="lien"><i class="medium material-icons modal-trigger" href="#modal1">more_horiz</i></a>
-               </div>
-              </div>
-           </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-             <div class="card">
-             <div class="card-image">
-                 <img src="../medias/pizza-napoletana.jpg">
-                 <span class="card-title">Pizza Napoletana</span>
-             </div>
-             <div class="card-action conteneurBtn">
-                <a href="#" id="lien"><i class="medium material-icons">add_box</i></a>
-                <a href="#" id="lien"><i class="medium material-icons modal-trigger" href="#modal2">more_horiz</i></a>
-             </div>
-             </div>
-          </div>
-      </div>
-      <div class="row">
-        <div class="col s12">
            <div class="card">
-            <div class="card-image">
-               <img src="../medias/pizza-napoletana.jpg">
-               <span class="card-title">Pizza Napoletana</span>
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="../medias/pizza-napoletana.jpg">
             </div>
-            <div class="card-action conteneurBtn">
-               <a href="#" id="lien"><i class="medium material-icons">add_box</i></a>
-               <a href="#" id="lien"><i class="medium material-icons modal-trigger" href="#modal3">more_horiz</i></a>
+            <div class="card-content">
+              <span class="card-title grey-text text-darken-4">
+                 <span style="padding : 4px 8px; color:#444;" class="activator"><b>Pizza 7 fromages</b></span>
+                 <i class="small iconPanier material-icons right" id="ajoutPanier">add_shopping_cart</i>
+                 <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
+              </span>
             </div>
-           </div>
-        </div>
-     </div>
-     <div class="row">
-      <div class="col s12">
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Pizza 7 fromages<i class="material-icons right">close</i></span>
+              <div class="modal-content">
+                <p>Base tomate, pomme de terre, <b>Raclette</b>, <b>Mont d'Or</b>, <b>Parmesan</b>, <b>Mozzarella</b>, <b>Comté</b>, <b>Beaufort</b>, <b>Munster</b>, basilic</p>
+                <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp" style="bottom:-70px">add_shopping_cart</i>
+             </div>
+            </div>
+          </div>
+
           <div class="card">
-           <div class="card-image">
-              <img src="../medias/pizza-napoletana.jpg">
-              <span class="card-title">Pizza Napoletana</span>
+           <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="../medias/vegetariene.jpg">
            </div>
-           <div class="card-action conteneurBtn">
-             <a href="#" id="lien"><i class="medium material-icons">add_box</i></a>
-             <a href="#" id="lien"><i class="medium material-icons modal-trigger" href="#modal4">more_horiz</i></a>
+           <div class="card-content">
+            <span class="card-title grey-text text-darken-4">
+                <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
+                <i class="small iconPanier material-icons right" id="ajoutPanier2">add_shopping_cart</i>
+                <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
+            </span>
+           </div>
+           <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Végétarienne<i class="material-icons right">close</i></span>
+            <div class="modal-content">
+              <p>Base tomate, tomate cerise, <b>fromage</b>, basilic</p>
+              <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp2">add_shopping_cart</i>
+            </div>
+           </div>
+         </div>
+
+         <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+           <img class="activator" src="../medias/pizza-napoletana.jpg">
+          </div>
+          <div class="card-content">
+           <span class="card-title grey-text text-darken-4">
+              <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
+              <i class="small iconPanier material-icons right" id="ajoutPanier3">add_shopping_cart</i>
+              <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
+           </span>
+          </div>
+          <div class="card-reveal">
+           <span class="card-title grey-text text-darken-4">Napolitaine<i class="material-icons right">close</i></span>
+           <div class="modal-content">
+            <p>Base tomate, boeuf, mozzarella, <b>fromage</b>, basilic</p>
+            <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp3">add_shopping_cart</i>
            </div>
           </div>
+       </div>
+
+       <div class="card">
+       <div class="card-image waves-effect waves-block waves-light">
+         <img class="activator" src="../medias/vegetariene.jpg">
+       </div>
+       <div class="card-content">
+         <span class="card-title grey-text text-darken-4">
+             <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
+             <i class="small iconPanier material-icons right" id="ajoutPanier4">add_shopping_cart</i>
+             <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
+         </span>
+       </div>
+       <div class="card-reveal">
+         <span class="card-title grey-text text-darken-4">Végétarienne<i class="material-icons right">close</i></span>
+         <div class="modal-content">
+           <p>Base tomate, tomate cerise, <b>fromage</b>, basilic</p>
+           <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp4">add_shopping_cart</i>
+         </div>
+       </div>
       </div>
-    </div>
+
+      <div class="card">
+       <div class="card-image waves-effect waves-block waves-light">
+       <img class="activator" src="../medias/pizza-napoletana.jpg">
+       </div>
+       <div class="card-content">
+       <span class="card-title grey-text text-darken-4">
+            <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
+            <i class="small iconPanier material-icons right" id="ajoutPanier5">add_shopping_cart</i>
+            <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
+       </span>
+       </div>
+       <div class="card-reveal">
+       <span class="card-title grey-text text-darken-4">Napolitaine<i class="material-icons right">close</i></span>
+       <div class="modal-content">
+          <p>Base tomate, boeuf, mozzarella, <b>fromage</b>, basilic</p>
+          <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp5">add_shopping_cart</i>
+       </div>
+       </div>
+     </div>
+
+
 
 
         <!-- Modal Structure -->
